--- a/Final/02.Nonlinear without constraint.md
+++ b/Final/02.Nonlinear without constraint.md
@@ -84,3 +84,9 @@ Imagine you have a quadratic function
 ![[6.png]]
 
 ![[7.png]]
+(here psd is the same with pd and nsd with nd).
+
+
+
+------
+Overall, pd - sufficient and psd - necessary.
